Added mesh creation algorithm and triangular mesh to rectangular grid algorithm
--HG--
branch : jr-110527-2d_MGRTE_restructuring

--- a/src/Vts.SiteVisit/View/Application/Panels/FemSolverView.xaml
+++ b/src/Vts.SiteVisit/View/Application/Panels/FemSolverView.xaml
@@ -92,7 +92,7 @@
         <StackPanel Orientation="Horizontal">
             
             <Button VerticalAlignment="Bottom" Command="{Binding ExecuteFemSolverCommand}"
-                Background="{Binding StackPanel.Background}" Content="Run Monte Carlo"  
+                Background="{Binding StackPanel.Background}" Content="Run 2D MG-RTE"  
                 Width="100" Height="30" Margin="5"/>
         </StackPanel>
 
