Corrected errors in mesh view model and included mesh data binding
--HG--
branch : jr-110527-2d_MGRTE_restructuring

--- a/src/Vts.SiteVisit/View/Application/Panels/FemSolverView.xaml
+++ b/src/Vts.SiteVisit/View/Application/Panels/FemSolverView.xaml
@@ -16,77 +16,77 @@
         
         <StackPanel Orientation="Horizontal" Margin="5">
             <TextBlock Text="G:" Margin="5"/>
-            <TextBox Text="{Binding G}" Margin="5"/>
+            <TextBox Text="{Binding Parameters.G}" Margin="5"/>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" Margin="5">
             <TextBlock Text="L:" Margin="5"/>
-            <TextBox Text="{Binding L}" Margin="5"/>
+            <TextBox Text="{Binding Parameters.L}" Margin="5"/>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" Margin="5">
             <TextBlock Text="Index i:" Margin="5"/>
-            <TextBox Text="{Binding Index_i}" Margin="5"/>
+            <TextBox Text="{Binding Parameters.Index_i}" Margin="5"/>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" Margin="5">
             <TextBlock Text="Index o:" Margin="5"/>
-            <TextBox Text="{Binding Index_o}" Margin="5"/>
+            <TextBox Text="{Binding Parameters.Index_o}" Margin="5"/>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" Margin="5">
             <TextBlock Text="A Level:" Margin="5"/>
-            <TextBox Text="{Binding Alevel}" Margin="5"/>
+            <TextBox Text="{Binding Parameters.Alevel}" Margin="5"/>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" Margin="5">
             <TextBlock Text="A Level 0:" Margin="5"/>
-            <TextBox Text="{Binding Alevel0}" Margin="5"/>
+            <TextBox Text="{Binding Parameters.Alevel0}" Margin="5"/>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" Margin="5">
             <TextBlock Text="S Level:" Margin="5"/>
-            <TextBox Text="{Binding Slevel}" Margin="5"/>
+            <TextBox Text="{Binding Parameters.Slevel}" Margin="5"/>
         </StackPanel>
         
         <StackPanel Orientation="Horizontal" Margin="5">
             <TextBlock Text="S Level 0:" Margin="5"/>
-            <TextBox Text="{Binding Slevel0}" Margin="5"/>
+            <TextBox Text="{Binding Parameters.Slevel0}" Margin="5"/>
         </StackPanel>
         
         <StackPanel Orientation="Horizontal" Margin="5">
             <TextBlock Text="Which Multi Grid:" Margin="5"/>
-            <TextBox Text="{Binding Whichmg}" Margin="5"/>
+            <TextBox Text="{Binding Parameters.Whichmg}" Margin="5"/>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" Margin="5">
             <TextBlock Text="N1:" Margin="5"/>
-            <TextBox Text="{Binding N1}" Margin="5"/>
+            <TextBox Text="{Binding Parameters.N1}" Margin="5"/>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" Margin="5">
             <TextBlock Text="N2:" Margin="5"/>
-            <TextBox Text="{Binding N2}" Margin="5"/>
+            <TextBox Text="{Binding Parameters.N2}" Margin="5"/>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" Margin="5">
             <TextBlock Text="N3:" Margin="5"/>
-            <TextBox Text="{Binding N3}" Margin="5"/>
+            <TextBox Text="{Binding Parameters.N3}" Margin="5"/>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" Margin="5">
             <TextBlock Text="Fmg:" Margin="5"/>
-            <TextBox Text="{Binding Fmg}" Margin="5"/>
+            <TextBox Text="{Binding Parameters.Fmg}" Margin="5"/>
         </StackPanel>
         
         <StackPanel Orientation="Horizontal" Margin="5">
             <TextBlock Text="N Max:" Margin="5"/>
-            <TextBox Text="{Binding N_max}" Margin="5"/>
+            <TextBox Text="{Binding Parameters.N_max}" Margin="5"/>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" Margin="5">
             <TextBlock Text="Tl:" Margin="5"/>
-            <TextBox Text="{Binding Tol}" Margin="5"/>
+            <TextBox Text="{Binding Parameters.Tol}" Margin="5"/>
         </StackPanel>
         
         <StackPanel Orientation="Horizontal">
