--- a/src/Vts.SiteVisit/View/Application/Panels/FemSolverView.xaml
+++ b/src/Vts.SiteVisit/View/Application/Panels/FemSolverView.xaml
@@ -4,12 +4,73 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:v="clr-namespace:Vts.SiteVisit.View"
     xmlns:vm="clr-namespace:Vts.SiteVisit.ViewModel"
-    xmlns:input="clr-namespace:SLExtensions.Input;assembly=SLExtensions" VerticalAlignment="Top" mc:Ignorable="d" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" d:DesignWidth="600" d:DesignHeight="700">
+    xmlns:input="clr-namespace:SLExtensions.Input;assembly=SLExtensions" VerticalAlignment="Top" mc:Ignorable="d" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" d:DesignWidth="500" d:DesignHeight="400">
 
     <UserControl.DataContext>
         <vm:FemSolverViewModel/>
     </UserControl.DataContext>
 
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+        </Grid.RowDefinitions>
+
+        <TextBlock Text="EXECUTE A SIMULATION:" FontSize="16" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" />
+        <!-- Optical Properties -->
+        <StackPanel Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3" Orientation="Horizontal">
+            <v:OpticalPropertyView Mua="1.0" DataContext="{Binding OpticalPropertyVM}" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            <StackPanel Orientation="Vertical" VerticalAlignment="Bottom">
+                <TextBlock Text="n (External)" HorizontalAlignment="Center" VerticalAlignment="Bottom" />
+                <TextBox HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Parameters.NExt, Mode=TwoWay}" />
+            </StackPanel>
+        </StackPanel>
+        <TextBlock Text="Square Mesh Properties:" TextDecorations="Underline" FontSize="16" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="3" Margin="0,10,0,0" />
+        <StackPanel Orientation="Vertical" Grid.Column="0" Grid.Row="3">
+            <TextBlock Text="Length [mm]" Margin="5" HorizontalAlignment="Center"/>
+            <TextBox Text="{Binding Parameters.Length, Mode=TwoWay}" Width="40"/>
+        </StackPanel>
+        <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="3">
+            <TextBlock Text="Spacial Mesh Levels" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Center"/>
+            <TextBox Text="{Binding Parameters.SMeshLevel, Mode=TwoWay}" Width="40" HorizontalAlignment="Left" Margin="20,0"/>
+            <TextBlock Text="2" FontSize="14"/>
+        </StackPanel>
+        <StackPanel Orientation="Vertical" Grid.Column="2" Grid.Row="3">
+            <TextBlock Text="Angular Mesh Levels" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Center"/>
+            <TextBox Text="{Binding Parameters.AMeshLevel, Mode=TwoWay}" Width="40" HorizontalAlignment="Left" Margin="20,0"/>
+            <TextBlock Text="2" FontSize="14"/>
+        </StackPanel>
+        <TextBlock Text="Multi-grid and Iteration Parameters:" TextDecorations="Underline" FontSize="16" Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="3" />
+        <StackPanel Orientation="Vertical" Margin="5" Grid.Column="0" Grid.Row="5" VerticalAlignment="Bottom">
+            <TextBlock Text="Multi-grid Solution Type" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Center" TextAlignment="Center"/>
+            <TextBox Text="{Binding Parameters.MgMethod, Mode=TwoWay}" Margin="5" Width="40"/>
+        </StackPanel>
+        <StackPanel Orientation="Vertical" Margin="5" Grid.Column="1" Grid.Row="5" VerticalAlignment="Bottom">
+            <TextBlock Text="Maximum Iterations" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Center" TextAlignment="Center"/>
+            <TextBox Text="{Binding Parameters.NIterations, Mode=TwoWay}" Margin="5" Width="40"/>
+        </StackPanel>
+        <StackPanel Orientation="Vertical" Margin="5" Grid.Column="2" Grid.Row="5" VerticalAlignment="Bottom">
+            <TextBlock Text="Convergence Tolerance" TextWrapping="Wrap" Margin="5" HorizontalAlignment="Center" TextAlignment="Center"/>
+            <TextBox Text="{Binding Parameters.ConvTol, Mode=TwoWay}" Margin="5" Width="40"/>
+        </StackPanel>
+        <Button Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="6" HorizontalAlignment="Right" VerticalAlignment="Bottom" Command="{Binding ExecuteFemSolverCommand}"
+                Content="Run 2D MG-RTE"  
+                Width="100" Height="30" Margin="5"/>
+    </Grid>
+</UserControl>
+
+
+<!--
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"></ColumnDefinition>
@@ -111,3 +172,4 @@
                 Width="100" Height="30" Margin="5"/>
     </Grid>
 </UserControl>
+-->
