--- a/src/Vts.SiteVisit/View/Application/Panels/IsolatedStorageView.xaml
+++ b/src/Vts.SiteVisit/View/Application/Panels/IsolatedStorageView.xaml
@@ -2,19 +2,23 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
     xmlns:input="clr-namespace:SLExtensions.Input;assembly=SLExtensions"
-    Width="400" Height="200">
+    Width="441" Height="115"  >
+    <Border BorderThickness="5" BorderBrush="Red">
+        <StackPanel Height="97" Width="420" Margin="5">
 
-    <StackPanel>
-
-        <TextBlock x:Name="SpacedUsed" />
-        <TextBlock x:Name="SpaceAvaiable"/>
-        <TextBlock x:Name="CurrentQuota"/>
-        <StackPanel Orientation="Horizontal">                
-            <TextBlock x:Name="NewSpace">Space Requested: </TextBlock>
-            <TextBox x:Name="SpaceRequest" Width="100"/>
-            <TextBlock>(1048576 = 1 MB)</TextBlock>
+            <TextBlock >The Monte Carlo panel requires extra space in order to save results to disk.</TextBlock>
+            <TextBlock >Please indicate the size (in MB) to allocate in IsolatedStorage.</TextBlock>
+            <TextBlock x:Name="SpacedUsed" />
+            <TextBlock x:Name="SpaceAvaiable"/>
+            <TextBlock x:Name="CurrentQuota"/>
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" >
+                <TextBlock x:Name="NewSpace">Space Requested:</TextBlock>
+                <TextBox x:Name="SpaceRequest" Width="48" Text="100" />
+                <TextBlock >MB</TextBlock>
+                <!--<TextBlock>(1048576 = 1 MB)</TextBlock>-->
+            </StackPanel>
+            <Button Content="Increase Storage" Width="100" Height="40" Click="Button_Click"/>
+            <TextBlock x:Name="Results"/>
         </StackPanel>
-        <Button Content="Increase Storage" Width="100" Height="40" Click="Button_Click"/>
-        <TextBlock x:Name="Results"/>
-    </StackPanel>
+    </Border>
 </UserControl>
