Renamed SingleEllipsoidTissue into SingleInclusionTissue to allow in the future for other inclusions (VoxelRegion, for example) Fixed TextOutputView to update to the bottom after text is changed

--- a/src/Vts.SiteVisit/View/Application/SolverDemoView.xaml
+++ b/src/Vts.SiteVisit/View/Application/SolverDemoView.xaml
@@ -13,7 +13,7 @@
     </UserControl.DataContext>
     <Grid x:Name="layoutRoot">
         <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-            <Grid>
+            <Grid VerticalAlignment="Top" >
                 <Grid.Background>
                     <RadialGradientBrush RadiusX="1.01" RadiusY="1.1" Center="0.002,-0.001" GradientOrigin="-0.001,-0.006">
                         <GradientStop Color="Black" Offset="0"/>
