--- a/src/Vts.SiteVisit/View/Controls/TextOutputView.xaml
+++ b/src/Vts.SiteVisit/View/Controls/TextOutputView.xaml
@@ -3,15 +3,9 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:vm="clr-namespace:Vts.SiteVisit.ViewModel"
              VerticalAlignment="Top">
-    <!--<UserControl.DataContext>
-        <vm:TextOutputViewModel/>
-    </UserControl.DataContext>-->
-    <!--<Border BorderBrush="Yellow" BorderThickness="10">-->
         <Grid Background="White">
-            <ScrollViewer VerticalScrollBarVisibility="Visible" Height="100" >
-                <TextBlock Text="{Binding Text}" Height="10000" />
+            <ScrollViewer x:Name="scrollViewer" VerticalScrollBarVisibility="Visible" Height="100" >
+                <TextBlock Text="{Binding Text}" MinHeight="100"/>
             </ScrollViewer>
         </Grid>
-
-    <!--</Border>-->
 </UserControl>
